<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Convertor PDF</string>
    <string name="images_to_pdf">Imágenes a PDF</string>
    <string name="word_to_pdf">Word a PDF</string>
    <string name="excel_to_pdf">Excel a PDF</string>
    <string name="ppt_to_pdf">PowerPoint a PDF</string>
    <string name="select_images">Seleccionar imágenes</string>
    <string name="select_file">Seleccionar archivo</string>
    <string name="create_pdf">Crear PDF</string>
    <string name="pdf_name">Nombre del PDF</string>
    <string name="rotate_left">Rotar izquierda</string>
    <string name="rotate_right">Rotar derecha</string>
    <string name="filter_original">Original</string>
    <string name="filter_grayscale">Escala de grises</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_brightness">Brillo</string>
    <string name="filter_invert">Invertir</string>
    <string name="crop">Recortar</string>
    <string name="crop_confirm">Confirmar recorte</string>
    <string name="crop_cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="move_up">Subir</string>
    <string name="move_down">Bajar</string>
    <string name="pdf_created">PDF creado exitosamente</string>
    <string name="pdf_error">Error al crear el PDF</string>
    <string name="enter_pdf_name">Ingresa el nombre del PDF</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="share">Compartir</string>
    <string name="no_images">No hay imágenes seleccionadas</string>
    <string name="select_at_least_one">Selecciona al menos una imagen</string>
    <string name="processing">Procesando...</string>
    <string name="conversion_complete">Conversión completada</string>
    <string name="conversion_error">Error en la conversión</string>
    <string name="file_not_supported">Formato de archivo no soportado</string>
</resources>
